--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,17 +20,17 @@ jobs:
           echo "  user: \"${{ secrets.DB_USER }}\"" >> config/config.yaml
           echo "  password: \"${{ secrets.DB_PASSWORD }}\"" >> config/config.yaml
           echo "  dbname: \"${{ secrets.DB_NAME }}\"" >> config/config.yaml
-          echo "  port: ${DB_PORT}" >> config/config.yaml
+          echo "  port: \"${{ secrets.DB_PORT }}\"" >> config/config.yaml
           echo "  sslmode: \"${{ secrets.DB_SSLMODE }}\"" >> config/config.yaml
       
-      - name: Build Docker Image for REST API
+      - name: Build Docker Image for Scraper
         run: |
           docker build ./ -t scraper
 
-      - name: Stop and remove previous backend container
+      - name: Stop and remove previous scraper container
         run: |
           docker stop scraper || true
           docker rm scraper || true
-      - name: Start REST API in Docker
+      - name: Start Scraper in Docker
         run: |
           docker run -d --name scraper  scraper
